# url-shorter

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
backend/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs
url-shorter-backend/: .env  Cargo.toml  DB.db  startup-mongo.sh
url-shorter-backend/src/: lib.rs  main.rs  utils.rs  web.rs
url-shorter-backend/src/db/: mod.rs  models.rs  schema.rs
url-shorter-backend/tests/: integration_tests.rs  startup-test-mongodb.sh  test.env
url-shorter-frontend/: Cargo.toml  index.html
url-shorter-frontend/src/: main.rs
