[package]
name = "url-shorter-backend"
version = "0.1.0"
authors = [
    "Sasha Yusuk <thepulticula@gmail.com>"
]
edition = "2018"
include = ["src/**/*"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
saphir =  { version = "2.8.2",  features = ["redirect"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
radix_fmt = "1.0"
url = "2.2"

slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"] }
slog-envlogger = { version = "2.2.0", default-features = false }
slog-term =  "2.8"
slog-async = "2.6"
